--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
         android:allowBackup="true"
@@ -15,20 +16,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EnglishAlert">
-        <activity android:name=".activity.CriticsActivity"></activity>
+        <activity android:name=".activity.TipsTrickActivity"/>
+        <activity android:name=".activity.FunfactActivity" />
+        <activity android:name=".activity.QuizActivity" />
+        <activity android:name=".activity.ConfirmQuizActivity" />
+        <activity android:name=".activity.SparklingNewcomerActivity" />
+        <activity android:name=".activity.TranslateEngIdnActivity" />
+        <activity android:name=".activity.CriticsActivity" />
         <activity android:name=".activity.AboutUsActivity" />
         <activity android:name=".activity.ForgotPasswordActivity" />
         <activity android:name=".activity.FaqActivity" />
         <activity android:name=".activity.ChangePasswordActivity" />
         <activity android:name=".activity.ChangeProfileActivity" />
-        <activity android:name=".activity.TranslateActivity" />
-        <activity android:name=".activity.LatihanActivity" />
-        <activity android:name=".activity.MateriActivity" />
-        <activity android:name=".activity.SearchActivity" />
+        <activity android:name=".activity.TranslateIdnEngActivity" />
+        <activity android:name=".activity.ExerciseActivity" />
+        <activity android:name=".activity.MaterialActivity" />
         <activity android:name=".activity.IllustrationActivity" />
         <activity android:name=".activity.SettingsActivity" />
         <activity android:name=".activity.ProfileActivity" />
-        <activity android:name=".activity.DiscussionActivity" />
+        <activity android:name=".activity.ArticleActivity" />
         <activity android:name=".activity.RegisterActivity" />
         <activity android:name=".activity.HomeActivity" />
         <activity android:name=".activity.LoginActivity" />
